--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Shared Canvas</title>
     <style>
       body, html {
         height: 100%;
@@ -20,6 +20,7 @@
   </head>
   <body>
     <canvas id="canvas" width="800" height="800"></canvas>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
+    <script src="mitchell.js" type="module"></script>
   </body>
 </html>
