--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <canvas id="canvas" width="800" height="800"></canvas>
     <script src="main.js" type="module"></script>
     <script src="mitchell.js" type="module"></script>
+    <script src="philippos.js" type="module"></script>
   </body>
 </html>
