--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Shared Canvas</title>
     <style>
-      body, html {
-        height: 100%;
-      }
-
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      #canvas {
-        border: 1px solid;
-      }
+        body,
+        html {
+            height: 100%;
+        }
+        
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        #canvas {
+            border: 1px solid;
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <canvas id="canvas" width="800" height="800"></canvas>
     <script src="main.js" type="module"></script>
     <script src="mitchell.js" type="module"></script>
-  </body>
+    <script src="kash.js" type="module"></script>
+</body>
+
 </html>
