--- a/index.html
+++ b/index.html
@@ -24,22 +24,59 @@
 <body>
     <canvas id="canvas" width="800" height="800"></canvas>
   
+    <!-- Don't edit main -->
     <script src="main.js" type="module"></script>
-    <script src="megan.js" type="module"></script>
+
+    <!-- 0, 0 Ernest -->
+
     <script src="mitchell.js" type="module"></script>
+    <!-- 0, 1 Megan -->
+    <script src="megan.js" type="module"></script>
+    <!-- 2, 0 Matthew -->
     <script src="matthew.js" type="module"></script>
+    <!-- 4, 0 Ali -->
 
+    <!-- 2, 1 Jarquevious -->
+
+    <!-- 2, 2 Joanelly -->
+
+    <!-- 2, 3 Alex -->
+
+    <!-- 3, 0 Starlight -->
+
+    <!-- 3, 2 Danika -->
+
+    <!-- 3, 4 Chao -->
+
+    <!-- 4, 0 Jay -->
+
+    <!-- 4, 1 Mario -->
+
+    <!-- 4, 3 Gobind -->
+
+    <!-- 4, 4 Tian -->
+
+    <!-- 2, 0 Dino -->
     <script src="dino.js" type="module"></script>
+    <!-- 3, 0 Yin -->
     <script src="yin.js" type="module"></script>
+    <!-- 1, 0 Jonathan -->
     <script src="jonathan.js" type="module"></script>
+    <!-- 1, 4 Zach -->
     <script src="zach.js" type="module"></script>
+    <!-- 3, 1 Chris -->
     <script src="chris.js" type="module"></script>
+    <!-- 2, 4 Ryan -->
     <script src="ryan.js" type="module"></script>
+    <!-- 1, 2 Cao -->
     <script src="cao.js" type="module"></script>
+    <!-- 4, 2 Anneka -->
     <script src="anneka.js" type="module"></script>
+    <!-- 1, 3 Kash -->
     <script src="kash.js" type="module"></script>
+    <!-- 1, 1 Philippos -->
     <script src="philippos.js" type="module"></script>
-
+    <!-- 3, 3 Luis -->
     <script src="luis.js" type="module"></script>
 
   </body>
