--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   
     <!-- Don't edit main -->
     <script src="main.js" type="module"></script>
-
+    <!-- 4, 4 Mitchell -->
+    <script src="mitchell.js" type="module"></script>
     <!-- 0, 0 Ernest -->
 
-    <script src="mitchell.js" type="module"></script>
     <!-- 0, 1 Megan -->
     <script src="megan.js" type="module"></script>
     <!-- 2, 0 Matthew -->
