--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="800" height="800"></canvas>
+    <canvas id="canvas" width="678" height="565"></canvas>
   
     <!-- Don't edit main -->
     <script src="main.js" type="module"></script>
@@ -48,7 +48,7 @@
 
     <!-- 3, 4 Chao -->
 
-    <!-- 4, 0 Jay -->
+    <!-- 0, 4 Jay -->
 
     <!-- 4, 1 Mario -->
 
@@ -56,9 +56,11 @@
 
     <!-- 4, 4 Tian -->
 
-    <!-- 2, 0 Dino -->
+    <!-- 5, 0 Timo -->
+
+    <!-- 0, 2 Dino -->
     <script src="dino.js" type="module"></script>
-    <!-- 3, 0 Yin -->
+    <!-- 0, 3 Yin -->
     <script src="yin.js" type="module"></script>
     <!-- 1, 0 Jonathan -->
     <script src="jonathan.js" type="module"></script>
