--- a/index.html
+++ b/index.html
@@ -81,5 +81,6 @@
     <!-- 3, 3 Luis -->
     <script src="luis.js" type="module"></script>
 
+    <script src="test.js" type="module"></script>
   </body>
 </html>
