--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+    <p>Shared Canvas</p>
     <canvas id="canvas" width="678" height="565"></canvas>
   
     <!-- Don't edit main -->
