--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <p>Shared Canvas</p>
+    <h1>Shared Canvas</h1>
     <canvas id="canvas" width="678" height="565"></canvas>
   
     <!-- Don't edit main -->
