--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <script src="megan.js" type="module"></script>
     <script src="mitchell.js" type="module"></script>
     <script src="philippos.js" type="module"></script>
+    <script src="tian.js" type="module"></script>
   </body>
 </html>
