--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         html {
             height: 100%;
         }
-        
+
         body {
             display: flex;
             justify-content: center;
@@ -16,7 +16,7 @@
             align-items: center;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
-        
+
         #canvas {
             border: 1px solid;
         }
@@ -26,7 +26,7 @@
 <body>
     <h1>Shared Canvas</h1>
     <canvas id="canvas" width="678" height="565"></canvas>
-  
+
     <!-- Don't edit main -->
     <script src="main.js" type="module"></script>
     <!-- 4, 3 Mitchell -->
@@ -46,7 +46,7 @@
     <!-- 2, 3 Alex -->
 
     <!-- 3, 0 Starlight -->
-
+    <script src="starlight.js" type="module"></script>
     <!-- 3, 2 Danika -->
 
     <!-- 3, 4 Chao -->
