--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- 3, 2 Danika -->
 
     <!-- 3, 4 Chao -->
-
+    <script src="chao.js" type="module"></script>
     <!-- 0, 4 Jay -->
 
     <!-- 4, 1 Mario -->
