--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <!-- 2, 2 Joanelly -->
 
     <!-- 2, 3 Alex -->
+    <script src="alex.js" type="module"></script>
 
     <!-- 3, 0 Starlight -->
 
