--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Shared Canvas</title>
     <style>
-        body,
-        html {
-            height: 100%;
-        }
-        
-        body {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            align-items: center;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-        
-        #canvas {
-            border: 1px solid;
-        }
-    </style>
-</head>
+      body,
+      html {
+        height: 100%;
+      }
 
-<body>
+      body {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
+
+      #canvas {
+        border: 1px solid;
+      }
+    </style>
+  </head>
+
+  <body>
     <h1>Shared Canvas</h1>
     <canvas id="canvas" width="678" height="565"></canvas>
-  
+
     <!-- Don't edit main -->
     <script src="main.js" type="module"></script>
     <!-- 4, 3 Mitchell -->
@@ -59,6 +59,8 @@
 
     <!-- 4, 4 Tian -->
 
+    <script src="tian.js" type="module"></script>
+
     <!-- 5, 0 Timo -->
 
     <!-- 0, 2 Dino -->
@@ -83,6 +85,5 @@
     <script src="philippos.js" type="module"></script>
     <!-- 3, 3 Luis -->
     <script src="luis.js" type="module"></script>
-
   </body>
 </html>
