[Add] Ali's drawing

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- 2, 0 Matthew -->
     <script src="matthew.js" type="module"></script>
     <!-- 4, 0 Ali -->
-
+    <script src="ali.js" type="module"></script>
     <!-- 2, 1 Jarquevious -->
 
     <!-- 2, 2 Joanelly -->
