--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <script src="main.js" type="module"></script>
     <!-- 4, 3 Mitchell -->
     <script src="mitchell.js" type="module"></script>
+    <script src="sandy.js" type="module"></script>
+
 
 
     <!-- 0, 0 Ernest -->
