--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Shared Canvas</title>
     <style>
         body,
         html {
             height: 100%;
         }
-        
+
         body {
             display: flex;
             justify-content: center;
@@ -16,21 +15,25 @@
             align-items: center;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
-        
+
         #canvas {
             border: 1px solid;
         }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Shared Canvas</h1>
     <canvas id="canvas" width="678" height="565"></canvas>
-  
+
     <!-- Don't edit main -->
     <script src="main.js" type="module"></script>
     <!-- 4, 3 Mitchell -->
     <script src="mitchell.js" type="module"></script>
+    <script src="sandy.js" type="module"></script>
+
+
+
     <!-- 0, 0 Ernest -->
 
     <!-- 0, 1 Megan -->
@@ -38,15 +41,16 @@
     <!-- 2, 0 Matthew -->
     <script src="matthew.js" type="module"></script>
     <!-- 4, 0 Ali -->
-
+    <script src="ali.js" type="module"></script>
     <!-- 2, 1 Jarquevious -->
 
     <!-- 2, 2 Joanelly -->
 
     <!-- 2, 3 Alex -->
+    <script src="alex.js" type="module"></script>
 
     <!-- 3, 0 Starlight -->
-
+    <script src="starlight.js" type="module"></script>
     <!-- 3, 2 Danika -->
 
     <!-- 3, 4 Chao -->
@@ -56,8 +60,10 @@
     <!-- 4, 1 Mario -->
 
     <!-- 5, 1 Gobind -->
-
+    <script src="gobind.js" type="module"></script>
     <!-- 4, 4 Tian -->
+
+    <script src="tian.js" type="module"></script>
 
     <!-- 5, 0 Timo -->
 
@@ -83,6 +89,5 @@
     <script src="philippos.js" type="module"></script>
     <!-- 3, 3 Luis -->
     <script src="luis.js" type="module"></script>
-
   </body>
 </html>
